--- a/API/less/style.less
+++ b/API/less/style.less
@@ -169,16 +169,20 @@ text-align:center;
 
    h1{
     font-family: @fonte;
-    font-size: 30px;
+    font-size: 23px;
     color: red;
     text-align: center;
+    margin: 0;
+    padding: 0;
   }
 
    p{
     font-family: @fonte;
-    font-size: 19px;
+    font-size: 21px;
     color: grey;
     text-align: center;
+    margin: 0;
+    padding: 0;
   }
 
   img {
@@ -645,6 +649,6 @@ font-size: 20px;
 
 #quadros{
   h2{
-    font-size: 20px;
+    font-size: 28px;
   }
 }
