--- a/API/views/quadros.pug
+++ b/API/views/quadros.pug
@@ -28,14 +28,14 @@ body
 						li#filmes.collapsed.active(data-toggle='collapse', data-target='#filmes')
 							a(href='#')
 							i.fa.fa-film.fa-lg
-							strong  Filmes
+							strong  Movies
 							span.arrow
 						ul.sub-menu.collapse
 								
 						li#series.collapsed(data-toggle='collapse', data-target='#seriados')
 							a(href='#')
 							i.fa.fa-video-camera.fa-lg
-							strong  Seriados
+							strong  Shows
 						ul.sub-menu.collapse
 								
 						li#animes.collapsed(data-toggle='collapse', data-target='#desenhos')
