--- a/API/views/produtoselecionado.pug
+++ b/API/views/produtoselecionado.pug
@@ -24,7 +24,7 @@ body
 			div.col-md-6.image
 				br
 				span#zoom.zoom
-					img(src=dados.quadros[cod].Imagem, alt='Daisy on the Ohoopee')
+					img(src=data[cod].image, alt='Daisy on the Ohoopee')
 				br
 				.row
 					div.col-md-2
