--- a/API/public/stylesheets/style.css
+++ b/API/public/stylesheets/style.css
@@ -11,12 +11,6 @@ body {
 a {
   color: #00B7FF;
 }
-.brand {
-  text-align: center !important;
-  font-size: 28px;
-  font-family: 'Farsan', cursive;
-  line-height: 50px !important;
-}
 .out p {
   color: #424242;
 }
@@ -30,20 +24,6 @@ a {
 }
 label {
   text-align: center;
-}
-.sidebar1 {
-  background: #F17153;
-  /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(#ef6c00, #F58D63, #f1ab53);
-  /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(#ef6c00, #F58D63, #f1ab53);
-  /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(#ef6c00, #F58D63, #f1ab53);
-  /* For Firefox 3.6 to 15 */
-  background: linear-gradient(#ef6c00, #F58D63, #f1ab53);
-  /* Standard syntax */
-  padding: 0px;
-  min-height: 100%;
 }
 .list {
   color: #fff;
@@ -64,12 +44,6 @@ label {
 }
 .main-content {
   text-align: center;
-}
-.laranja {
-  width: 100%;
-  background-color: #ef6c00;
-  height: 250px;
-  margin: 0 auto;
 }
 .veja h1 {
   font-family: 'Farsan', cursive;
@@ -378,36 +352,6 @@ figure.effect-zoe:hover p.icon-links a:first-child {
 .vermelho {
   color: red;
 }
-#resultados-busca {
-  background-color: #26A69A;
-  padding: 10px;
-  border-style: outset black;
-  border-radius: 10px;
-  z-index: 1024;
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  max-height: 400px;
-  overflow-y: auto;
-  box-shadow: 0px 10px 20px #444;
-}
-#resultados-busca h3 {
-  font-family: 'Farsan', cursive;
-  font-size: 19px;
-  color: red;
-  text-align: center;
-}
-#resultados-busca h5 {
-  font-family: 'Farsan', cursive;
-  cursor: pointer;
-  font-size: 20px;
-  color: black;
-  text-align: center;
-}
-#resultados-busca img {
-  width: 300px;
-  height: 100px;
-}
 header {
   font-family: 'Lobster', cursive;
   text-align: center;
@@ -542,15 +486,86 @@ a {
 .logo {
   text-align: center;
 }
+.logo img {
+  height: 250px;
+}
 .container-fluid {
   padding: 0;
 }
-#text-search {
-  border-radius: 30px;
+#txt-search {
+  margin-bottom: 50px;
 }
 .col-md-10 {
   padding: 40px;
 }
 #quadros h2 {
   font-size: 28px;
+}
+.brand {
+  text-align: center !important;
+  font-size: 28px;
+  font-family: 'Farsan', cursive;
+  line-height: 50px !important;
+}
+#menu-content {
+  cursor: pointer;
+}
+.laranja {
+  width: 100%;
+  background-color: #203041;
+  height: 250px;
+  margin: 0 auto;
+}
+.sidebar1 {
+  background: #F17153;
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#ef6c00, #F58D63, #f1ab53);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#ef6c00, #F58D63, #f1ab53);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#ef6c00, #F58D63, #f1ab53);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#ef6c00, #F58D63, #f1ab53);
+  /* Standard syntax */
+  padding: 0px;
+  min-height: 100%;
+}
+#resultados-busca {
+  background-color: #26A69A;
+  padding: 10px;
+  border-style: outset black;
+  border-radius: 10px;
+  z-index: 1024;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  max-height: 400px;
+  overflow-y: auto;
+  box-shadow: 0px 10px 20px #444;
+}
+#resultados-busca h3 {
+  font-family: 'Farsan', cursive;
+  font-size: 50px;
+  color: red;
+  text-align: center;
+}
+#resultados-busca h4 {
+  font-family: 'Farsan', cursive;
+  font-size: 30px;
+  color: black;
+  text-align: center;
+}
+#resultados-busca p {
+  color: black;
+}
+#resultados-busca h5 {
+  font-family: 'Farsan', cursive;
+  cursor: pointer;
+  font-size: 50px;
+  color: black;
+  text-align: center;
+}
+#resultados-busca img {
+  width: 300px;
+  height: 350px;
 }
