--- a/API/views/logo.pug
+++ b/API/views/logo.pug
@@ -1,5 +1,6 @@
 div.laranja
 	div.logo
-		a(href="http://localhost:60000/quadros"): img.className#IdName(src="/images/logo2.png" alt="Image Title" )
+		a(href="http://localhost:60000/quadros"): img.className#IdName(src="/images/logo.png" alt="Image Title")
+		a(href="http://localhost:60000/quadros"): img.className#IdName(src="/images/logoescrita.png" alt="Image Title")
 
 
