--- a/API/less/style.less
+++ b/API/less/style.less
@@ -170,7 +170,7 @@ text-align:center;
 
 }
 .imagem:hover h1, .imagem:hover p {
-    color: black;
+    color: white;
 }
 
 .imagem:hover {
@@ -640,7 +640,7 @@ font-size: 20px;
   padding: 10px;
   border-style: outset black;
   border-radius: 10px;
-  z-index: 1024; 
+  z-index: 10; 
   position:relative; 
   bottom: 0; 
   width: 100%; 
@@ -678,4 +678,22 @@ font-size: 20px;
     width: 300px;
     height: 350px;
   }
+}
+
+.tituloModal {
+  text-align: center;
+  font-family: @fonte;
+  h2{
+    padding-top:20px;
+  }
+}
+
+.tamanho{
+  img{
+    width: 100%;
+  }
+}
+
+.col-md-7{
+  text-align: justify;
 }
