--- a/API/views/quadros.pug
+++ b/API/views/quadros.pug
@@ -52,7 +52,9 @@ body
 									i.material-icons search
 								i.material-icons close
 						div#resultados-busca
-
+				#modal1.modal
+					.modal-footer
+						#produto
 				div.brancojson
 					div.container
 						div.row
